2004-09-08  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* doc/descriptions/unsupported.desc: Added Microtek Scanmaker 5700,
	  ArtixScan 4000tf and Medion MD41985.

2004-09-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure: Regenerated.
	* doc/descriptions/unsupported.desc
	  doc/descriptions-external/genesys.desc: Moved HP 35xx series to
	  unsupported.desc because these scanners use a RTS8801 chip (no
	  Genesys chipset).
	
2004-09-06  Jochen Eisinger <jochen@penguin-breeder.org>

	* backend/mustek_pp.c: clarify error message
	* configure.in: only build the mustek_pp backend, if parallel
	  port support of any kind is present

2004-09-06  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Bumped build number.
	* backend/plustek-usbdevs.c: Fixed bug #300913.
	
2004-09-05  Julien Blache <jb@jblache.org>

	* More auth_callback() fixes, although they're not critical.

2004-09-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Lexmark X1130, Dell
	  1600n. Removed Canon LiDE 35 (now in genesys.desc) and Epson
	  Perfection 2480 (now in snapscan.desc).
	* doc/descriptions-external/genesys.desc: Added Canon LiDE 35.
	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_low.h backend/gt68xx_low.h
	  backend/gt68xx_shm_channel.c
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Fixed firmware name for Mustek 1248
	  UB. Changed status to basic. Removed "unsupported" warning.
	  Added workaround for shared memory compilation problem on
	  Windows. It's now possible to add a new vendor/product id line
	  to gt68xx.conf to test yet unsupported scanners without changing
	  the source code.
	* frontend/.cvsignore: Added tstbackend.
	
2004-09-02  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-scsi.c backend/snapscan-options.c